--- a/package.json
+++ b/package.json
@@ -14,11 +14,15 @@
 		"url": "https://github.com/gustavogvbs/eslint-config-pattern/issues"
 	},
 	"dependencies": {
+		"@eslint/compat": "^1.2.4",
+		"@eslint/eslintrc": "^3.2.0",
+		"@eslint/js": "^9.17.0",
 		"@typescript-eslint/eslint-plugin": "^8.18.1",
 		"@typescript-eslint/parser": "^8.18.1",
 		"eslint": "^9.17.0",
 		"eslint-config-prettier": "^9.1.0",
-		"eslint-plugin-import": "^2.29.1",
+		"eslint-import-resolver-typescript": "^3.7.0",
+		"eslint-plugin-import": "^2.31.0",
 		"eslint-plugin-import-helpers": "^2.0.1",
 		"eslint-plugin-jsx-a11y": "^6.10.2",
 		"eslint-plugin-n": "^17.5.1",
@@ -26,6 +30,8 @@
 		"eslint-plugin-promise": "^7.2.1",
 		"eslint-plugin-react": "^7.37.2",
 		"eslint-plugin-react-hooks": "^5.1.0",
+		"eslint-plugin-react-refresh": "^0.4.16",
+		"globals": "^15.14.0",
 		"prettier": "^3.2.5"
 	},
 	"peerDependencies": {
