--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
 		"eslint-plugin-react-hooks": "^5.1.0",
 		"eslint-plugin-react-refresh": "^0.4.16",
 		"globals": "^15.14.0",
-		"prettier": "^3.2.5"
+		"prettier": "^3.2.5",
+		"typescript-eslint": "^8.18.1"
 	},
 	"peerDependencies": {
 		"typescript": ">=5"
